Fix alignment of same btn

--- a/frontend/src/app/account-settings/account-settings.component.css
+++ b/frontend/src/app/account-settings/account-settings.component.css
@@ -79,7 +79,7 @@
   color: #2B8BF8;
   background: #FFFFFF;
   border-color: #2B8BF8;
-  width: 300px;  
+  width: 250px;  
 }
 
 .button-blue:hover {
